--- a/templates/pokemon_sprites.jinja2
+++ b/templates/pokemon_sprites.jinja2
@@ -26,26 +26,26 @@
     {% endif %}
     <tr>
       <th>Front</th>
-      {{ pokemon_sprite_row(front_sprite, 192, 192) }}
+      {{ pokemon_sprite_row(front_sprite) }}
     </tr>
     <tr>
       <th>Back</th>
-      {{ pokemon_sprite_row(back_sprite, 192, 192) }}
+      {{ pokemon_sprite_row(back_sprite) }}
     </tr>
     {% if egg_sprite.exists %}
     <tr>
       <th>Egg</th>
-      {{ pokemon_sprite_row(egg_sprite, 64, 64) }}
+      {{ pokemon_sprite_row(egg_sprite) }}
     </tr>
     {% endif %}
     <tr>
       <th>Icon</th>
-      {{ pokemon_sprite_row(icon, 64, 64) }}
+      {{ pokemon_sprite_row(icon) }}
     </tr>
     {% if egg_icon.exists %}
     <tr>
       <th>Egg icon</th>
-      {{ pokemon_sprite_row(egg_icon, 64, 64) }}
+      {{ pokemon_sprite_row(egg_icon) }}
     </tr>
     {% endif %}
   </table>
