--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -53,7 +53,7 @@
 	{% for pokemon in trainer.pokemons %}			
 		<div style="display: flex; justify-content: space-evenly; margin-bottom: 1em">
 			<figure style="margin-right: 0.4em">
-				<a href="{{ url_base }}/pokemon/{{ pokemon.name|slug }}.html#{{ pokemon.form|slug }}">
+				<a href="{{ url_base }}/pokemon/{{ pokemon.name|slug }}.html{% if pokemon.form is not none %}#{{ pokemon.form|slug }}{% endif %}">
 					<img
 						src="data:image/png;base64,{{ pokemon.sprite }}"
 						alt="{{ pokemon.name }}{% if pokemon.gender is not none or pokemon.shiny == 1 %} ({% if pokemon.gender is not none %}{{ pokemon.gender|lower }}{% endif %}{% if pokemon.shiny == 1 %}{% if pokemon.gender is not none %}, {% endif %}shiny{% endif %}){% endif %}"
@@ -77,7 +77,16 @@
 					{% endif %}
 					{{ pokemon.friendship }} friendship
 					<br>
-					{% for ability in pokemon.abilities %}<a href="{{ url_base }}/ability/{{ ability|slug }}.html">{{ ability }}</a>{% if not loop.last %}/{% endif %}{% endfor %}{% if len(pokemon.abilities) > 1 %} (<abbr title="The Pokémon will have one of these abilities randomly chosen for it at the start of the battle.">?</abbr>){% endif %};
+					{% if len(pokemon.abilities) == 1 %}
+						{% for ability in pokemon.abilities.0.abilities %}<a href="{{ url_base }}/ability/{{ ability|slug }}.html">{{ ability }}</a>{% if not loop.last %}/{% endif %}{% endfor %}{% if len(pokemon.abilities.0.abilities) > 1 %} (<abbr title="The Pokémon will have one of these abilities randomly chosen for it at the start of the battle.">?</abbr>){% endif %}
+						<br>
+					{% else %}
+						{% for abilentry in pokemon.abilities %}
+							<b><a href="{{ url_base }}/pokemon/{{ pokemon.name|slug }}.html#{{ abilentry.form }}">{{ abilentry.form }}</a></b>:
+							{% for ability in abilentry.abilities %}<a href="{{ url_base }}/ability/{{ ability|slug }}.html">{{ ability }}</a>{% if not loop.last %}/{% endif %}{% endfor %}{% if len(abilentry.abilities) > 1 %} (<abbr title="The Pokémon will have one of these abilities randomly chosen for it at the start of the battle.">?</abbr>){% endif %}
+							<br>
+						{% endfor %}
+					{% endif %}
 					{{ pokemon.nature }} nature
 					</div>
 					<div style="display: flex; align-items: center; justify-content: space-between;">
