--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -134,6 +134,8 @@ from "type" where "name" = :query
 	<li><a href="{{ url_base }}/items.html">Items</a></li>
 	<li><a href="{{ url_base }}/areas.html">Areas</a></li>
 	<li><a href="{{ url_base }}/trainers.html">Trainers</a></li>
+	<li><a href="{{ url_base }}/egg_groups.html">Egg groups</a></li>
+	<lI><a href="{{ url_base }}/growth_rates.html">Growth rates</a></lI>
 </ul>
 
 </section>
