fix bug breaking nidoran-f page

--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -180,7 +180,7 @@
 		<p style="margin-top: 0.1em"><small>Jump to:
 			<a href="#${{ form.name }}/stats">Stats</a> &bull;
 			{% if form.evo_tree is not none and form.evo_tree[0].children %}
-				<a href="#$evolution">Evolution</a> &bull;
+				<a href="#${{ form.name }}/evolution">Evolution</a> &bull;
 			{% endif %}
 			<a href="#${{ form.name }}/moves">Moves</a> &bull;
 			<a href="#${{ form.name }}/encounters">Encounter rates</a> &bull;
@@ -326,8 +326,8 @@
 			{% endif %}
 		</table>
 
-		<section id="${{ form.name }}/stats">
-			<h3>Stats</h3>
+		<section>
+			<h3 id="${{ form.name }}/stats">Stats</h3>
 
 			<table class="data-table" style="width: 100%">
 				<tr>
@@ -364,8 +364,8 @@
 		</section>
 
 		{% if form.evo_tree is not none and form.evo_tree[0].children %}
-		<section id="${{ form.name }}/evolution">
-			<h3>Evolution</h3>
+		<section>
+			<h3 id="${{ form.name }}/evolution">Evolution</h3>
 
 			<div class="evo-line">
 				{% for branch in form.evo_tree %}				
