fix bug with silcoon/cascoon pages

--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -380,6 +380,7 @@
 
 			<div class="move-sections">
 				<div>
+				{% if form.level_moves %}
 				<section>
 					<h4>Learnt by levelling up</h4>
 
@@ -395,8 +396,8 @@
 						</tr>
 						{% endfor %}
 					</table>
-
 				</section>
+				{% endif %}
 				{% if form.evolution_moves %}
 				<section>
 					<h4>Learnt on evolution</h4>
