battle facility trainers pages, wip

--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -253,7 +253,7 @@
 				</tr>
 				<tr>
 					<th rowspan="2">Regular Abilities</th>
-					<td {% if '2' not in form.abilities %} rowspan="2" {% endif %}><a href="../ability/{{ form.abilities['1'].name|slug }}.html">{{ form.abilities['1'].name }}</a></td>
+					<td {% if '2' not in form.abilities %} rowspan="2" {% endif %}><a href="{{ url_base }}/ability/{{ form.abilities['1'].name|slug }}.html">{{ form.abilities['1'].name }}</a></td>
 					<td {% if '2' not in form.abilities %} rowspan="2" {% endif %}>{{ form.abilities['1'].desc }}</td>
 				</tr>
 				<tr>
