--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -135,7 +135,8 @@ from "type" where "name" = :query
 	<li><a href="{{ url_base }}/areas.html">Areas</a></li>
 	<li><a href="{{ url_base }}/trainers.html">Trainers</a></li>
 	<li><a href="{{ url_base }}/egg_groups.html">Egg groups</a></li>
-	<lI><a href="{{ url_base }}/growth_rates.html">Growth rates</a></lI>
+	<li><a href="{{ url_base }}/growth_rates.html">Growth rates</a></li>
+	<li><a href="{{ url_base }}/battle_facility_trainers.html">Battle facility trainers</a></li>
 </ul>
 
 </section>
