--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -700,7 +700,7 @@
 							{{ bfset.nature }} nature
 						</div>
 						<div style="display: flex; align-items: center; justify-content: space-evenly;">
-							{{ move_list(bfset.moves, 'Moves') }}
+							{{ move_list(bfset.moves, 'Moves', false) }}
 							{{ ev_table(bfset.evs, 'EVs') }}
 						</div>
 					</div>
