don't show egg hatch for battle forms

--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -309,7 +309,7 @@
 				{% endif %}
 				</td>
 			</tr>
-			{% if form.babies %}
+			{% if form.babies and not form.battle_only %}
 			<tr>
 				<th scope="row">Eggs hatch into</th>
 				<td colspan="5">
