added page for move tutors

--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -137,6 +137,7 @@ from "type" where "name" = :query
 	<li><a href="{{ url_base }}/egg_groups.html">Egg groups</a></li>
 	<li><a href="{{ url_base }}/growth_rates.html">Growth rates</a></li>
 	<li><a href="{{ url_base }}/battle_facility_trainers.html">Battle facility trainers</a></li>
+	<li><a href="{{ url_base }}/move_tutors.html">Move tutors</a></li>
 </ul>
 
 </section>
