--- a/templates/move_tutor_list.jinja2
+++ b/templates/move_tutor_list.jinja2
@@ -39,7 +39,7 @@ Move Tutors
                         {% elif move_tutor.cost_is_monetary %}
                             {{ move_tutor.cost_quantity }} Pokédollars
                         {% else %}
-                            {{ move_tutor.cost_quantity }} &times; <a href="{{ url_base }}/item/{{ move_tutor.cost_item.name|slugify }}.html">{{ move_tutor.cost_item.name }}</a>
+                            {{ move_tutor.cost_quantity }} &times; <a href="{{ url_base }}/item/{{ move_tutor.cost_item.name|slug }}.html">{{ move_tutor.cost_item.name }}</a>
                         {% endif %}
                     </td>
                     <td>{{ base64_image(move_tutor.sprite) }}</td>
