--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -33,6 +33,16 @@
 			<td>{{ trainer.skill }}</td>
 		</tr>
 		<tr>
+			<th>Area</th>
+			<td colspan="3">
+			{% if trainer.area is none %}
+				Unknown
+			{% else %}
+				<a href="{{ url_base }}/area/{{ trainer.area.id }}.html">{{ trainer.area.name }} ({{ trainer.area.id }})</a>
+			{% endif %}
+			</td>
+		</tr>
+		<tr>
 			<th>Items</th>
 			<td colspan="3">
 			{% if trainer.items_ %}
