--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -33,16 +33,6 @@
 			<td>{{ trainer.skill }}</td>
 		</tr>
 		<tr>
-			<th>Area</th>
-			<td colspan="3">
-			{% if trainer.area is none %}
-				Unknown
-			{% else %}
-				<a href="{{ url_base }}/area/{{ trainer.area.id }}.html">{{ trainer.area.name }} ({{ trainer.area.id }})</a>
-			{% endif %}
-			</td>
-		</tr>
-		<tr>
 			<th>Items</th>
 			<td colspan="3">
 			{% if trainer.items_ %}
@@ -55,6 +45,52 @@
 		</tr>
 	</table>
 </div>
+
+<section>
+	<h2>Locations</h2>
+
+	{% if trainer.battles %}
+
+	<table>
+		<tr>
+			<th>Area</th>
+			<th>Loss dialogue</th>
+			<th>Type</th>
+			<th>Flags</th>
+		</tr>
+		{% for battle in trainer.battles %}
+		<tr>
+			<td><a href="{{ url_base }}/area/{{ battle.area.id }}.html">{{ battle.area.name }} ({{ battle.area.id }})</a></td>
+			<td>{{ battle.end_speech }}</td>
+			<td>
+				{% if battle.is_double %}
+					{% if battle.partner_index is none %}
+					Double
+					{% else %}
+						Partnered with <a href="{{ url_base }}/trainer/{{ battle.partner }}.html">{{ battle.partner }}</a>
+					{% endif %}
+				{% else %}
+				Single
+				{% endif %}
+			</td>
+			<td>
+				{% if battle.level_100 %}
+					<abbr title="The Pokémon of the participants in the battle will be set to level 100 for the duration of the battle.">Level 100</abbr>{% if battle.can_lose %},{% endif %}
+				{% endif %}
+				{% if battle.can_lose %}
+					<abbr title="If the player is defeated by this trainer, they will not black out.">Can lose</abbr>
+				{% endif %}
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
+
+	{% else %}
+
+	<p>Either this trainer can't be battled, or their battle is initiated in an unusual way which the creator of this website failed to detect.</p>
+
+	{% endif %}
+</section>
 
 <section>
 	<h2>Team</h2>
