--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -67,7 +67,7 @@
 					{% if battle.partner_index is none %}
 					Double
 					{% else %}
-						Partnered with <a href="{{ url_base }}/trainer/{{ battle.partner }}.html">{{ battle.partner }}</a>
+						Partnered with <a href="{{ url_base }}/trainer/{{ battle.partner|slug }}.html">{{ battle.partner }}</a>
 					{% endif %}
 				{% else %}
 				Single
