--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -56,6 +56,75 @@
 			<th>Fixed weather</th>
 			<td>{{ area.weather }}</td>
 		</tr>
+		<tr>
+			<th>Background music</th>
+			<td colspan="2">
+				{% if area.bg_music is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.bg_music }}">{{ area.bg_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+			<th>Background sound</th>
+			<td colspan="2">
+				{% if area.bg_sound is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.bg_sound }}.ogg">{{ area.bg_sound }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+		</tr>
+		<tr>
+			<th>Wild battle music</th>
+			<td>
+				{% if area.wild_battle_music is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.wild_battle_music }}.ogg">{{ area.wild_battle_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+			<th>Wild victory music</th>
+			<td>
+				{% if area.wild_win_music is not none %}
+					<a href="{{ url_base }}/audio/me/{{ area.wild_win_music }}.ogg">{{ area.wild_win_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+			<th>Surf music</th>
+			<td>
+				{% if area.surf_music is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.surf_music }}.ogg">{{ area.surf_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+		</tr>
+			<th>Trainer battle music</th>
+			<td>
+				{% if area.trainer_battle_music is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.trainer_battle_music }}.ogg">{{ area.trainer_battle_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+			<th>Trainer victory music</th>
+			<td>
+				{% if area.trainer_win_music is not none %}
+					<a href="{{ url_base }}/audio/me/{{ area.trainer_win_music }}.ogg">{{ area.trainer_win_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+			<th>Bicycle music</th>
+			<td>
+				{% if area.bicycle_music is not none %}
+					<a href="{{ url_base }}/audio/bgm/{{ area.bicycle_music }}.ogg">{{ area.bicycle_music }}</a>
+				{% else %}
+					Default
+				{% endif %}
+			</td>
+		</tr>
 	</table>
 
 	<section>
