--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -288,7 +288,15 @@
 			<tr>
 				<th>Pokédex entry</th>
 				<td colspan="5">{{ form.pokedex_entry }}
-			</td>
+			</tr>
+			<tr>
+				<th>Cry</th>
+				<td colspan="5">
+					<audio controls src="{{ url_base }}/audio/se/{{ form.cry_id }}.ogg">
+						<a href="{{ url_base }}/audio/se/{{ form.cry_id }}">{{ form.cry_id }}</a>
+					</audio>
+				</td>
+			</tr>
 			<tr>
 				<th>Height</th>
 				<td>{{ form.height_feet }}&prime;{{ form.height_inches }}&Prime; / {{ form.height_m }} m</td>
