fix trainer battle music links

--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -36,7 +36,7 @@
 			<th><abbr title="This music is played by default while the player is in battle with this trainer. It may be overridden for specific battles.">Battle music</abbr></th>
 			<td>
 				{% if trainer.battle_music %}
-					<a href="{{ url_base }}/audio/me/{{ trainer.battle_music }}.ogg">{{ trainer.battle_music }}</a>
+					<a href="{{ url_base }}/audio/bgm/{{ trainer.battle_music }}.ogg">{{ trainer.battle_music }}</a>
 				{% else %}
 					<abbr title="The battle music will fall back to being determined by other means, e.g. by the area in which the battle takes place.">Default</abbr>
 				{% endif %}
